--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,6 +9,7 @@
       <li><a href="#p/<%= backend.name %>/periodCollections/add/" class="btn btn-primary">Add period collection</a></li>
       <li><a href="#p/<%= backend.name %>/sync/" class="btn btn-primary">Sync with server</a></li>
       <li><a href="#p/<%= backend.name %>/patches/submit/" class="btn btn-primary">Send patch</a></li>
+      <li><a href="#p/<%= backend.name %>/patches/" class="btn btn-primary">Submitted patches</a></li>
       <hr />
       <li><button id="js-delete-database" class="btn btn-danger">Delete database</button></li>
     </ul>
