Add error logging function

--- a/style.less
+++ b/style.less
@@ -29,6 +29,16 @@ html, body {
 }
 
 
+// Error list
+#error-list {
+  line-height: @footerHeight;
+}
+.error-icon {
+  height: 22px;
+}
+
+
+
 // PERIOD FORM
 
 .period-form {
