Don't mutate patch object when rendering it
This is an annoying one that I'll revisit during refactoring

--- a/src/templates/changes/period_collection_add.html
+++ b/src/templates/changes/period_collection_add.html
@@ -2,7 +2,7 @@
   var _ = require('underscore');
   var json = patch.toJSON();
   var PeriodCollection = require('../../models/period_collection');
-  var periodCollection = new PeriodCollection(_.omit(json.value, 'id'), { parse: true });
+  var periodCollection = new PeriodCollection(_.omit(json.value, 'id'), { parse: true, noMutate: true });
   var timeSpan = periodCollection.getTimespan();
 %>
 
