Refactor period editing view

--- a/src/views/period_edit/templates/label_field.html
+++ b/src/views/period_edit/templates/label_field.html
@@ -1,4 +1,4 @@
-<div class="form-group alternate-label-field">
+<div class="form-group" data-field="alternate-label">
   <div class="input-group">
     <div class="input-group-addon label-language btn btn-default"><%= language %></div>
     <input class="form-control" value="<%= value %>" type="text" />
