--- a/src/templates/period_collection_list.html
+++ b/src/templates/period_collection_list.html
@@ -8,11 +8,10 @@
     </tr>
   </thead>
   <tbody>
-  <% var p = localStorage.currentBackend %>
   <% periodCollections.forEach(function (periodCollection) { %>
     <tr>
       <td>
-        <a href="#p/<%= p %>/periodCollections/<%= encodeURIComponent(periodCollection.id) %>/">
+        <a href="<%= backend.path %>periodCollections/<%= encodeURIComponent(periodCollection.id) %>/">
           <%= periodCollection.source().displayTitle() %>
         </a>
       </td>
