--- a/src/views/period_edit/templates/spatial_coverage_form.html
+++ b/src/views/period_edit/templates/spatial_coverage_form.html
@@ -4,6 +4,7 @@
     <div>
       <input class="form-control long" id="js-spatialCoverageLabel"
       placeholder="A textual description for the list of regions chosen below."
+      value="<%= data.spatialCoverageDescription %>"
       type="text" />
     </div>
   </div>
@@ -14,3 +15,4 @@
       <ul class="spatial-coverage-list"></ul>
       <input class="form-control country-autocomplete" type="text" placeholder="Begin typing to search">
     </div>
+  </div>
