--- a/src/views/period_edit/templates/temporal_coverage_form.html
+++ b/src/views/period_edit/templates/temporal_coverage_form.html
@@ -11,72 +11,104 @@
 
 <div class="period-dates form-group">
 
-  <div class="date-input-container date-input-start row">
+  <div data-terminus="start" class="date-input-container date-input-start row">
     <div class="col-md-12">
       <h4>Start</h4>
     </div>
     <div class="col-md-12">
       <label class="control-label field-required-label" for="js-startDate">Label</label>
-      <input class="form-control label-input" id="js-startLabel" type="text" />
+      <input class="form-control js-terminus-label"
+             id="js-startLabel"
+             type="text"
+             data-field="label"
+             value="<%= start.data.label %>" />
     </div>
 
-    <div class="date-single-year">
+    <div data-field="terminus-in" class="date-single-year">
       <div class="col-md-4">
         <label for="js-startYear">Year</label>
-        <input class="form-control year-input" id="js-startYear" type="text" />
+        <input class="form-control js-year"
+               id="js-startYear"
+               type="text"
+               data-field="year"
+               value="<%= (start.data.in || {}).year %>" />
       </div>
       <div class="col-md-4">&nbsp;</div>
     </div>
 
-    <div class="date-multi-year hide">
+    <div data-field="terminus-in" class="date-multi-year hide">
       <div class="col-md-4">
         <label for="js-startEarliest">Earliest year</label>
-        <input class="form-control earliest-year-input" id="js-startEarliest" type="text" />
+        <input class="form-control js-earliest-year"
+               id="js-startEarliest"
+               type="text"
+               data-field="earliestYear"
+               value="<%= (start.data.in || {}).earliestYear %>" />
       </div>
       <div class="col-md-4">
         <label for="js-startLatest">Latest year</label>
-        <input class="form-control latest-year-input" id="js-startLatest" type="text" />
+        <input class="form-control js-latest-year"
+               id="js-startLatest"
+               type="text"
+               data-field="latestYear"
+               value="<%= (start.data.in || {}).latestYear %>" />
       </div>
     </div>
 
     <div class="col-md-4">
       <label>&nbsp;</label>
-      <button class="btn btn-primary toggle-year-parts">Toggle earliest/latest</button>
+      <button class="btn btn-primary js-toggle-year-parts">Toggle earliest/latest</button>
     </div>
   </div>
 
   <hr/>
 
-  <div class="date-input-container date-input-stop row">
+  <div data-terminus="stop" class="date-input-container date-input-stop row">
     <div class="col-md-12"><h4>Stop</h4></div>
 
     <div class="col-md-12">
       <label class="control-label field-required-label" for="js-endDate">Label</label>
-      <input class="form-control label-input" id="js-endLabel" type="text" />
+      <input class="form-control js-terminus-label"
+             id="js-endLabel"
+             type="text"
+             data-field="label"
+             value="<%= stop.data.label %>" />
     </div>
 
-    <div class="date-single-year">
+    <div data-field="terminus-in" class="date-single-year">
       <div class="col-md-4">
         <label for="js-startYear">Year</label>
-        <input class="form-control year-input" id="js-startYear" type="text" />
+        <input class="form-control js-year"
+               id="js-startYear"
+               type="text"
+               data-field="year"
+               value="<%= (stop.data.in || {}).year %>" />
       </div>
       <div class="col-md-4">&nbsp;</div>
     </div>
 
-    <div class="date-multi-year hide">
+    <div data-field="terminus-in" class="date-multi-year hide">
       <div class="col-md-4">
         <label for="js-startEarliest">Earliest year</label>
-        <input class="form-control earliest-year-input" id="js-startEarliest" type="text" />
+        <input class="form-control js-earliest-year"
+               id="js-startEarliest"
+               type="text"
+               data-field="earliestYear"
+               value="<%= (stop.data.in || {}).earliestYear %>" />
       </div>
       <div class="col-md-4">
         <label for="js-startLatest">Latest year</label>
-        <input class="form-control latest-year-input" id="js-startLatest" type="text" />
+        <input class="form-control js-latest-year"
+               id="js-startLatest"
+               type="text"
+               data-field="latestYear"
+               value="<%= (stop.data.in || {}).latestYear %>" />
       </div>
     </div>
 
     <div class="col-md-4">
       <label>&nbsp;</label>
-      <button class="btn btn-primary toggle-year-parts">Toggle earliest/latest</button>
+      <button class="btn btn-primary js-toggle-year-parts">Toggle earliest/latest</button>
     </div>
   </div>
 
