--- a/src/views/source_edit/templates/source_name_form.html
+++ b/src/views/source_edit/templates/source_name_form.html
@@ -1,5 +1,9 @@
-<div class="input-group">
-  <input class="form-control" name="source-name" type="text"/>
+<div class="input-group source-person">
+  <input class="form-control"
+         name="source-name"
+         type="text"
+         data-field="name"
+         value="<%= name %>" />
   <span class="input-group-addon js-name-add btn"><strong>+</strong></span>
   <span class="input-group-addon js-name-remove btn"><strong>-</strong></span>
 </div>
