Fix a couple of stylistic things

--- a/src/templates/errors.html
+++ b/src/templates/errors.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-  <a href="#" data-toggle="dropdown">
+  <a href="#" data-no-redirect="true" data-toggle="dropdown">
     <img class="error-icon" src="/lib/noun_2189_cc.svg">Errors (<%= errors.length %>)
   </a>
 
