Get rid of references to models

--- a/src/templates/changes/period_collection_add.html
+++ b/src/templates/changes/period_collection_add.html
@@ -1,7 +1,7 @@
 <%
   var _ = require('underscore');
   var json = patch.toJSON();
-  var PeriodCollection = require('../../models/period_collection');
+  var PeriodCollection = function () { throw new Error() }
   var periodCollection = new PeriodCollection(_.omit(json.value, 'id'), { parse: true, noMutate: true });
   var timeSpan = periodCollection.getTimespan();
 %>
