--- a/src/views/source_edit/templates/ld_source_form.html
+++ b/src/views/source_edit/templates/ld_source_form.html
@@ -27,7 +27,7 @@
 
 <div id="source-accept-dialog" class="hide">
   <div id="source-information"></div>
-  <div id="source-confirm">
+  <div class="source-confirm">
     <p>Incorrect source?</p>
     <div>
       <button id="js-reject-source" class="btn btn-danger">&lsaquo; Reset</button>
