--- a/style.less
+++ b/style.less
@@ -118,11 +118,11 @@ dl.source {
   > div { margin-bottom: 8px; }
 }
 
-#source-confirm {
+.source-confirm {
   text-align: center;
   background-color: #fafafa;
   margin: 0 20%;
-  padding: 12px 0;
+  padding: 12px;
   box-shadow: #eee 2px 2px 2px;
   border-radius: 2px;
   border: 1px solid #999;
