--- a/src/views/source_edit/templates/ld_source_current.html
+++ b/src/views/source_edit/templates/ld_source_current.html
@@ -1,3 +1,13 @@
-<p>Source attributes are currently generated from linked data.</p>
-<%= require('../../../templates/source.html')({ source: source }) %>
-<button class="btn btn-warning change-ld-source">Change source</button>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <div>
+      <%= require('../../../templates/source.html')({ source: source }) %>
+    </div>
+    <div class="source-confirm">
+      <p>Source attributes are currently generated from linked data.</p>
+      <div>
+        <button class="btn btn-warning js-change-ld-source">Change source</button>
+      </div>
+    </div>
+  </div>
+</div>
