--- a/src/views/source_edit/templates/source_edit.html
+++ b/src/views/source_edit/templates/source_edit.html
@@ -1,12 +1,10 @@
 <div class="row">
-  <div class="col-md-6" id="ld-source-select"></div>
+  <div class="col-md-6 hide" id="ld-source-select"></div>
   <div class="col-md-6 hide" id="no-ld-source-select"></div>
 
   <div id="non-ld-source-toggle" class="col-md-6">
     <div>
-      <button class="btn btn-default btn-lg toggle-form-type">My source is not linked data &rsaquo;</button>
+      <button class="btn btn-default btn-lg toggle-form-type"></button>
     </div>
   </div>
-
-
 </div>
