Fix a couple bugs in period edit functionality

--- a/src/views/period_edit/templates/period_form.html
+++ b/src/views/period_edit/templates/period_form.html
@@ -36,8 +36,8 @@
   </div>
 
   <div class="period-form-footer">
-    <button type="button" id="js-save-period" class="btn btn-primary">Save</button>
-    <button type="button" id="js-cancel-period" class="btn btn-default">Cancel</button>
-    <button type="button" id="js-delete-period" class="btn btn-danger pull-right">Delete</button>
+    <button type="button" class="js-save-period btn btn-primary">Save</button>
+    <button type="button" class="js-cancel-period btn btn-default">Cancel</button>
+    <button type="button" class="js-delete-period btn btn-danger pull-right">Delete</button>
   </div>
 </div>
