Do not redirect on clicks for periodization exports

--- a/src/templates/period_collection_show.html
+++ b/src/templates/period_collection_show.html
@@ -8,9 +8,9 @@ var sourceInformation = require('./source.html');
 <div style="float: right">
   <h2>Export</h2>
   <ul class="unstyled">
-    <li><a href="#" class="download-file" data-filetype="csv">CSV</a></li>
-    <li><a href="#" class="download-file" data-filetype="ttl">Text/Turtle</a></li>
-    <li><a href="#" class="download-file" data-filetype="jsonld">JSON-LD</a></li>
+    <li><a href="#" class="download-file" data-no-redirect="true" data-filetype="csv">CSV</a></li>
+    <li><a href="#" class="download-file" data-no-redirect="true" data-filetype="ttl">Text/Turtle</a></li>
+    <li><a href="#" class="download-file" data-no-redirect="true" data-filetype="jsonld">JSON-LD</a></li>
   </ul>
 </div>
 
