Fix/bump tablesort

--- a/src/templates/period_collection_list.html
+++ b/src/templates/period_collection_list.html
@@ -1,10 +1,10 @@
 <table class="table table-hover">
-  <thead>
+  <thead class="nowrap">
     <tr>
-      <th>Source title</th>
-      <th>No. of definitions</th>
-      <th>Time span start</th>
-      <th>Time span stop</th>
+      <th data-sort-method="natural" class="sort-default">Source title</th>
+      <th data-sort-method="num">Defined periods</th>
+      <th data-sort-method="num">Earliest start</th>
+      <th data-sort-method="num">Latest stop</th>
     </tr>
   </thead>
   <tbody>
