--- a/src/templates/changes/period_edit.html
+++ b/src/templates/changes/period_edit.html
@@ -1,4 +1,4 @@
 <div>
-  <h4 class="period-patch-source">In source: <%= source.displayTitle() %></h4>
+  <h4 class="period-patch-source">In source: <%= source %></h4>
   <table class="table table-bordered"><tbody><%= diffs %></tbody></table>
 </div>
