--- a/style.less
+++ b/style.less
@@ -290,6 +290,9 @@ thead.nowrap th { white-space: nowrap; }
 th.sort-header {
   padding-left: 24px !important;
   padding-right: 24px !important;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: pointer;
 }
 
 th.sort-header.sort-down,
