Update sync view to use the new change list view(s)

--- a/src/templates/sync.html
+++ b/src/templates/sync.html
@@ -15,6 +15,7 @@
     <button id="js-accept-new-periods" class="btn btn-primary">Yes</button>
     <span id="js-sync-saving" style="position: relative;"></span>
   </div>
+  <div id="selected-changes-list"></div>
 </div>
 
 <div id="js-list-changes">
