Fix adding alternatel labels to period assertions

--- a/src/templates/period.html
+++ b/src/templates/period.html
@@ -30,6 +30,13 @@
   </div>
   <% } %>
 
+  <% if (period.url) { %>
+  <div class="field">
+    <dt>URL</dt>
+    <dd><%= period.url %></dd>
+  </div>
+  <% } %>
+
   <% if (period.sameAs) { %>
   <div class="field">
     <dt>Same as</dt>
