--- a/style.less
+++ b/style.less
@@ -366,3 +366,10 @@ a#connect-orcid-link:hover {
   line-height: @facetTitleSize + @facetHeaderVerticalPadding;
   margin-left: .8em;
 }
+
+// Pagination
+.pages.pagination { margin: 0}
+.pagination-container {
+  display: flex;
+  justify-content: space-between;
+}
