--- a/style.less
+++ b/style.less
@@ -373,3 +373,12 @@ a#connect-orcid-link:hover {
   display: flex;
   justify-content: space-between;
 }
+
+// Period display table
+.period-detail-table {
+  table-layout: fixed;
+}
+
+.period-details-row {
+  word-wrap: break-word;
+}
