Get footer working again

--- a/style.less
+++ b/style.less
@@ -3,7 +3,7 @@
 @footerHeight: 60px;
 @navBackground: #eee;
 
-html, body {
+html, body, .outer {
   height: 100%;
 }
 
@@ -23,14 +23,14 @@ html, body {
   border-top: 1px solid #ccc;
 }
 
-#version-number {
+.version-number-display {
   float: right;
   line-height: @footerHeight;
 }
 
 
 // Error list
-#error-list {
+.error-list {
   line-height: @footerHeight;
 }
 .error-icon {
