Add signin and signout components

--- a/style.less
+++ b/style.less
@@ -312,16 +312,18 @@ th.sort-header.sort-down::before {
 
 // ORCID
 #auth-menu li a { display: inline-block }
-#connect-orcid-link {
+.connect-orcid-link {
   cursor: pointer;
   color: #999;
+  font-size: 16px;
+  line-height: 32px;
 }
 
-a#connect-orcid-link:hover {
+a.connect-orcid-link:hover {
   color: #338caf;
 }
 
-#orcid-id-logo {
+.orcid-id-logo {
   display: block;
   margin: 0 .5em 0 0;
   padding: 0;
