Add autocomplete results & autocompletable input components

--- a/style.less
+++ b/style.less
@@ -381,3 +381,22 @@ a.connect-orcid-link:hover {
 .period-details-row {
   word-wrap: break-word;
 }
+
+// Autocomplete widget
+.autocomplete-results {
+  position: absolute;
+  padding: 0;
+  width: 80%;
+  margin-top: -14px;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+  // (individual results)
+.autocomplete-result {
+  padding: .25em 1em;
+}
+.autocomplete-result:hover,
+.autocomplete-result.autocomplete-result-focused {
+  background: #eee;
+}
