--- a/style.less
+++ b/style.less
@@ -366,12 +366,24 @@ a.connect-orcid-link:hover {
   margin-left: .8em;
 }
 
+
 // Pagination
 .pages.pagination { margin: 0}
 .pagination-container {
   display: flex;
   justify-content: space-between;
 }
+
+
+// Backend home - select navigation style
+.select-browse-item {
+  h2 {
+    font-size: 20px;
+    margin: 0 0 4px;
+  }
+}
+
+
 
 // Period display table
 .period-detail-table {
@@ -381,6 +393,7 @@ a.connect-orcid-link:hover {
 .period-details-row {
   word-wrap: break-word;
 }
+
 
 // Autocomplete widget
 .autocomplete-results {
