--- a/style.less
+++ b/style.less
@@ -32,6 +32,7 @@ html, body, .outer {
 // Error list
 .error-list {
   line-height: @footerHeight;
+  cursor: pointer;
 }
 .error-icon {
   height: 22px;
