Style tweaks for navbar

--- a/style.less
+++ b/style.less
@@ -139,6 +139,10 @@ dl.source {
   border-radius: 0;
 }
 
+.actions-menu {
+  margin-left: 12px;
+}
+
 .navbar-header > div, .navbar-header > ul {
   display: inline-block;
 }
@@ -412,5 +416,10 @@ a.connect-orcid-link:hover {
 }
 .autocomplete-result:hover,
 .autocomplete-result.autocomplete-result-focused {
+  background: #eee;
+}
+
+// Dropdowns (generic)
+.dropdown-menu > li > a:hover {
   background: #eee;
 }
