--- a/style.less
+++ b/style.less
@@ -423,3 +423,12 @@ a.connect-orcid-link:hover {
 .dropdown-menu > li > a:hover {
   background: #eee;
 }
+
+// Period range brush
+.brush .extent {
+  cursor: move;
+  fill: rgba(164, 164, 164, .3);
+  stroke: black;
+  stroke-width: 1px;
+  opacity: 1;
+}
