Various Safari fixes
Using immutable objects in React components' render functions doesn't
seem to work.

Could be related to this?-
http://stackoverflow.com/questions/31195321/immutable-js-mapping-over-keys-in-safari

--- a/style.less
+++ b/style.less
@@ -392,6 +392,9 @@ a.connect-orcid-link:hover {
 // Pagination
 .pages.pagination { margin: 0}
 .pagination-container {
+  display: -webkit-flex;
+  -webkit-justify-content: space-between;
+
   display: flex;
   justify-content: space-between;
 }
