Better support for scroll in overflowed elements on ipad

--- a/style.less
+++ b/style.less
@@ -452,3 +452,9 @@ a.connect-orcid-link:hover {
   stroke-width: 1px;
   opacity: 1;
 }
+
+.preformatted-file-display {
+  max-height: 500px;
+  overflow-y: 'auto';
+  -webkit-overflow-scrolling: touch;
+}
