Style tweaks for spatial coverage extent field

--- a/style.less
+++ b/style.less
@@ -458,3 +458,17 @@ a.connect-orcid-link:hover {
   overflow-y: 'auto';
   -webkit-overflow-scrolling: touch;
 }
+
+.SpatialCoverageExtent input {
+  border-radius: 4px 4px 0px 0px;
+  border-bottom: medium none #fff;
+}
+.SpatialCoverageExtent--list {
+  margin-top: -16px;
+  margin-left: 0px;
+  border-radius: 0px 0px 3px 3px;
+  padding: 6px 12px 8px;
+  border: 1px solid #ccc;
+  border-top-color: #e2e2e2;
+  background: #f9f9f9;
+}
