Add .flex-grow class

--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,7 @@
 @import "basscss-addons/modules/background-colors";
 
 @import "./variables";
+@import "./flex";
 
 html, body, #main {
   height: 100%;
