Widen minimum dropdown width.

--- a/style.less
+++ b/style.less
@@ -440,6 +440,9 @@ a.connect-orcid-link:hover {
 }
 
 // Dropdowns (generic)
+.dropdown-menu {
+  min-width: 200px;
+}
 .dropdown-menu > li > a:hover {
   background: #eee;
 }
